--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,7 @@
+# sidebar menu 리스트
 - title: Blog
   url: /
-- title: TEST
-  url: /test/
+# - title: TEST
+#   url: /test/
 - title: About
   url: /about/
