--- a/_data/archive.yml
+++ b/_data/archive.yml
@@ -2,9 +2,9 @@
 - type: dates
   title: Dates
   url: /dates/
-# - type: categories
-#   title: Categories
-#   url: /categories/
+- type: categories
+  title: Categories
+  url: /categories/
 - type: tags
   title: Tags
   url: /tags/
